# AdventOfCode2024

./: .gitignore  CMakeLists.txt  Main.cxx  README.md  main.cxx  precompiled.hxx
.github/workflows/: build.yml  cmake-single-platform.yml
Solutions/: CMakeLists.txt  Day.cxx  Day.h  Day.hxx  Day0.cxx  Day0.h  Day0.hxx  Day1.cxx  Day1.hxx  Day10.cxx  Day10.hxx  Day11.cxx  Day11.hxx  Day12.cxx  Day12.hxx  Day13.cxx  Day13.hxx  Day14.cxx  Day14.hxx  Day15.cxx  Day15.hxx  Day16.cxx  Day16.hxx  Day17.cxx  Day17.hxx  Day18.cxx  Day18.hxx  Day19.cxx  Day19.hxx  Day2.cxx  Day2.hxx  Day20.cxx  Day20.hxx  Day21.cxx  Day21.hxx  Day22.cxx  Day22.hxx  Day23.cxx  Day23.hxx  Day24.cxx  (+19 more)
Utilities/: CMakeLists.txt  Direction.cxx  Direction.hxx  Position.cxx  Position.hxx  PositionAndDirection.cxx  PositionAndDirection.hxx  parse.cxx  parse.hxx
